--- a/public/styles/createdPolls.css
+++ b/public/styles/createdPolls.css
@@ -4,17 +4,39 @@
     flex-wrap: wrap;
     width: 100%;
 }
+.createdPolls .content{
+    padding: 0 10%;
+}
 .poll{
     display: flex;
     margin: 5px;
-    width: 200px;
+    padding: 5px;
     background-color: violet;
     flex-direction: column;
     justify-content: space-between;
+    max-width: 20%;
+    min-width: 200px;
+}
+.poll h3{
+    margin-bottom: 10px;
+    word-break: break-all;
+    text-transform: uppercase;
 }
 .poll form{
+    width: 100%;
     display: flex;
     flex-direction: column;
+}
+.poll form .opt{
+    background-color: red;
+}
+.poll form .opt label{
+    text-transform: capitalize;
+    font-size: 18px;
+}
+.poll button{
+    width: 100%;
+    height: 25px;
 }
 .createdPolls .content{
     display: flex;
@@ -27,3 +49,4 @@
     /* height: 100px; */
     background-color: lightseagreen;
 }
+
