--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -55,6 +55,9 @@ input[type="text"]{
     width: 100%;
     text-align: center;
 }
+.newUserInfo{
+    margin-top: 30px;
+}
 .shiaDoIt{
     position: fixed;
     transform: rotateY(180deg);
@@ -81,7 +84,8 @@ input[type="text"]{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 0 5%;
+    padding: 0 20px;
+    margin: 0 10px;
     max-width: 30%;
 }
 .newUser p,.idCheck p, .createPoll p, .loginBox p{
@@ -118,7 +122,14 @@ input[type="text"]{
         left: -30px;
     }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
+    h1{
+        text-align: initial;
+        font-size: 28px;
+    }
+    .newUserInfo{
+        margin-top: 5px;
+    }
     .userInteraction{
         box-shadow: 0px 20px 20px #100a18;
         flex-direction: column;
@@ -128,5 +139,11 @@ input[type="text"]{
     }
     .newUser,.idCheck, .createPoll, .loginBox{
         max-width: initial;
+    }
+    .newUser p,.idCheck p, .createPoll p, .loginBox p{
+        text-align: justify;
+        font-size: 12px;
+        word-break: normal;
+        color: #ffffff7d;
     }
 }
